--- a/src/main/res/values-ko/strings.xml
+++ b/src/main/res/values-ko/strings.xml
@@ -2,8 +2,21 @@
 <resources>
     <string name="sdk_bltmanager_toast_tips_not_ble">설비가 BLE를 지지하지 않음</string>
     <string name="sdk_bltmanager_toast_tips_ble_connect_fail">블루투스 연결실패/n잠시후 재시도</string>
-    <string name="sdk_bltmanager_search_bl_dialog_title">주변의 설비를 검색하시겠습니까?</string>
-    <string name="sdk_bltmanager_search_bl_dialog_content">확인을 눌러 검색창에 들어가세요</string>
     <string name="sdk_bltmanager_search_bl_dialog_cancel">취소</string>
     <string name="sdk_bltmanager_search_bl_dialog_ok">확인</string>
+
+
+
+    <string name="sdk_bluetooth_conn_turned_on">휴대폰이 자전거에 가까이 있고, 자전거의 전원이 켜져있는지 확인하세요.</string>
+    <string name="sdk_bluetooth_conn_search_failure">검색 실패</string>
+    <string name="sdk_bluetooth_conn_bike_not_found">이 차대번호에 해당하는 자전거를 찾을 수 없습니다.</string>
+    <string name="sdk_bluetooth_conn_retry">재시도</string>
+    <string name="sdk_bluetooth_conn_communication_failure">통신 실패</string>
+    <string name="sdk_bluetooth_conn_reboot">자전거를 재부팅하고, 다시 시도해주세요.</string>
+    <string name="sdk_bluetooth_conn_reconnect">재연결</string>
+    <string name="sdk_bluetooth_conn_connecting">연결중</string>
+    <string name="sdk_bluetooth_conn_connected">연결되었습니다.</string>
+    <string name="sdk_bluetooth_conn_remarks">참고</string>
+    <string name="sdk_bluetooth_conn_is_succesful">자전거와 연결에 성공하셨나요?</string>
+
 </resources>
