--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="sdk_bltmanager_search_bl_dialog_content">Please click Confirm to enter the search page</string>
     <string name="sdk_bltmanager_search_bl_dialog_cancel">Cancel</string>
     <string name="sdk_bltmanager_search_bl_dialog_ok">Confirm</string>
+    <string name="sdk_bltmanager_search_bl_dialog_tip">Tip</string>
+    <string name="sdk_bltmanager_search_bl_dialog_open_ble">Please open Bluetooth at “Settings</string>
 
 
     <string name="btlist_toast_tip_bt_num_wrong">请连接与车架号对应的蓝牙号</string>
