--- a/src/main/res/values-es/strings.xml
+++ b/src/main/res/values-es/strings.xml
@@ -5,4 +5,6 @@
     <string name="sdk_bltmanager_search_bl_dialog_content">Haga click en confirmar para acceder a la página de búsqueda</string>
     <string name="sdk_bltmanager_search_bl_dialog_cancel">Cancelar</string>
     <string name="sdk_bltmanager_search_bl_dialog_ok">Confirmar</string>
+    <string name="sdk_bltmanager_search_bl_dialog_tip">Consejos</string>
+    <string name="sdk_bltmanager_search_bl_dialog_open_ble">Please open Bluetooth at “Settings</string>
 </resources>
