--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">BlueToothAndroid</string>
-
-    <string name="sdk_bltmanager_toast_tips_not_ble">BLE is not supported for your device</string>
-    <string name="sdk_bltmanager_toast_tips_ble_connect_fail">Bluetooth connection failed, please try later</string>
-    <string name="sdk_bltmanager_search_bl_dialog_cancel">Cancel</string>
-    <string name="sdk_bltmanager_search_bl_dialog_ok">Confirm</string>
-    <string name="sdk_bltmanager_search_bl_dialog_tip">Tip</string>
-    <string name="sdk_bltmanager_search_bl_dialog_open_ble">Please open Bluetooth at “Settings</string>
+    <string name="sdk_bltmanager_toast_tips_not_ble">设备不暂不支持BLE</string>
+    <string name="sdk_bltmanager_toast_tips_ble_connect_fail">蓝牙连接失败，请稍后重试</string>
+    <string name="sdk_bltmanager_search_bl_dialog_cancel">取消</string>
+    <string name="sdk_bltmanager_search_bl_dialog_ok">确定</string>
+    <string name="sdk_bltmanager_search_bl_dialog_tip">提示</string>
+    <string name="sdk_bltmanager_search_bl_dialog_open_ble">请在“设置”中打开蓝牙</string>
     <string name="btlist_toast_tip_bt_num_wrong">请连接与车架号对应的蓝牙号</string>
     <string name="sdk_bluetooth_conn_turned_on">请将手机靠近电单车并确保电单车电源已打开</string>
     <string name="sdk_bluetooth_conn_search_failure">搜索失败</string>
